--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -26,6 +26,7 @@
             display: block;
             padding: 6px 12px;
             text-decoration: none;
+            color: black;
         }
     }    
 }
