--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -37,6 +37,7 @@
 .cardContainer {
     margin-top: 0;
     background-color: #F6F6F6;
+    padding: 5%;
 }
 
 @media screen and (max-width: 768px) {
