--- a/src/components/common/cardsDetails/CardsDetails.scss
+++ b/src/components/common/cardsDetails/CardsDetails.scss
@@ -10,13 +10,18 @@
         .title-location {
             display: flex;
             flex-direction: column;
+            margin-bottom: 0%;
+            // padding-left: 1%;
+            .logs-location{color: black;
+            padding-bottom: 3%;}
             
         }
         .host-rating {
-            .lots-host {
+            .logs-host {
                 display: flex;
                 justify-content: flex-end;
                 gap: 10px;
+                // gap: 10px;
                 width: 100%;                
                 .host-picture{
                     width: 64px;
@@ -42,7 +47,7 @@
         }
     }
     
-    .lots-tags {
+    .logs-tags {
         display: flex;
         gap: 5px;
         
@@ -70,7 +75,7 @@
             border-color: none;
         }        
         
-        .lots-description{
+        .logs-description{
             display: flex;
             width: 80%;
             padding-right: 2%;
@@ -80,7 +85,7 @@
         }
         
         
-        .lots-equipements {
+        .logs-equipements {
             display: flex;
             width: 80%;
             padding-left: 2%;
@@ -115,7 +120,7 @@
             justify-content: center;
             align-items: center;
             width: 100%;
-            .lots-equipements {
+            .logs-equipements {
                 padding-left: 0;
                 width: 100%;
                 .collapse {
@@ -125,7 +130,7 @@
                     padding: 1%;
                 }
             }
-            .lots-description{
+            .logs-description{
                 width: 100%;
                 padding-right: 0;
             }    
