--- a/src/pages/about/About.scss
+++ b/src/pages/about/About.scss
@@ -12,7 +12,8 @@
         gap: 20px;
         p { 
             font-size: 1.2em;
-            padding-left: 1%;         
+            padding-left: 1%; 
+            color: black;        
         }
     }
 }
